[package]
name = "leaves"
version = "0.1.1"
edition = "2021"
description = "Markdown-to-Ratatui rendering library — rich terminal markdown previews with syntax highlighting, tables, LaTeX, and Mermaid diagrams"
license = "MIT"
repository = "https://github.com/freepicheep/leaves"
readme = "README.md"
keywords = ["markdown", "ratatui", "tui", "terminal", "syntax-highlighting"]
categories = ["command-line-interface", "text-processing", "value-formatting"]

[lib]
name = "leaves"
path = "src/lib.rs"

[dependencies]
ratatui       = "0.29"
pulldown-cmark = "0.12"
syntect       = "5.2"
unicode-width = "0.1"
unicodeit     = "0.2"
mmdflux       = "2.2"
